# gateway-sonar-check

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  client.py  docker-compose.yml  entrypoint.sh  env.example  main.py  pyproject.toml  requirements.txt  server.properties  setup.py  test.py  tox.ini
deploy/envs/dev/: values.yaml  values.yml
src/alembic/: env.py
src/alembic/versions/: bfc9ce28865a_create_stat_received_objects_table.py
src/apps/: services.py
src/apps/consumer/: events_consumer.py  services.py
src/apps/cron/: job.py
src/apps/models/: abstract.py  base.py  migrations.py  models.py  provider.py  services.py
src/apps/producer/: abstract.py  produce_message.py
src/config/: config.py  log_conf.py
src/events-gateway/: main.py
src/events-gateway/apps/: services.py
src/events-gateway/apps/consumer/: services.py
src/events-gateway/apps/models/: services.py
src/events-gateway/apps/producer/: abstract.py
src/events-gateway/web/: app.py
src/events_gateway/: main.py  migration.py
src/events_gateway/alembic/: env.py
src/events_gateway/apps/: services.py
src/events_gateway/apps/consumer/: events_consumer.py  selectors.py  services.py
src/events_gateway/apps/models/: abstract.py  base.py  (+4 more)
src/events_gateway/config/: config.py  log_conf.py
src/events_gateway/models/: __init__.py  abstract.py  base.py  migration.py  migrations.py  models.py
src/events_gateway/web/: app.py
src/eventsgateway/: main.py
src/eventsgateway/apps/: services.py
src/migration_config/: env.py
src/web/: app.py
src/web/routers/: api.py
(+14 files in other folders)
